--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "games landing page",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server --config webpack.config.dev.js"
   },
   "keywords": [
     "typescript",
