--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "games",
   "version": "1.0.0",
-  "description": "games landing page",
+  "description": "games section for gus portfolio",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gusram01/games"
+  },
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.dev.js"
+    "predeploy": "npm run build",
+    "deploy": "firebase deploy",
+    "build": "set NODE_ENV=production && webpack --config config/webpack.config.prod.js",
+    "postbuild": "postcss dist/src/css/**/*.css --use autoprefixer --no-map -r",
+    "start": "webpack-dev-server --config config/webpack.config.dev.js"
   },
   "keywords": [
     "typescript",
@@ -14,18 +22,24 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
+    "@types/clean-webpack-plugin": "^0.1.3",
     "@types/file-loader": "^4.2.0",
+    "@types/mini-css-extract-plugin": "^0.9.1",
     "@types/node": "^14.0.27",
+    "@types/optimize-css-assets-webpack-plugin": "^5.0.1",
     "@types/webpack": "^4.41.21",
     "@types/webpack-dev-server": "^3.11.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "image-webpack-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss-cli": "^7.1.2",
     "style-loader": "^1.2.1",
     "ts-loader": "^7.0.5",
-    "typescript": "^3.9.7",
+    "typescript": "^4.0.3",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
